docroot/themes/custom/wateraid/components/hero/hero.scss
@import "../../sass/base";

.hero {
  z-index: 1;

  &[data-component-id="wateraid:hero"] {
    margin-bottom: $wa-spacing-13;
    position: relative;
  }

  &__content-wrapper {
    width: 100%;

    @include desktop {
      @include page-container;
    }
  }

  .image,
  .video {
    margin-top: 0;
    @include desktop {
      margin-top: 0;
    }
  }

  &__image {
    width: 100%;
    display: inline;

    img {
      display: block;
      max-width: 100%;
      object-fit: cover;
      object-position: center;
    }

    &--desktop {
      display: none;
      @include desktop {
        display: block;
      }
    }

    &--mobile {
      display: block;
      @include desktop {
        display: none;
      }
    }
  }

  &__video {
    display: flex;
    width: 100%;
    position: relative;

    div {
      display: flex;
      flex: 1 1 100%;
    }

    video {
      width: 100%;
      height: 100%;
    }

    &--play,
    &--pause {
      position: absolute;
      bottom: $wa-spacing-04;
      right: $wa-spacing-03;
      z-index: 1;
      background: transparent;
      border: none;
      padding: 0;
      cursor: pointer;
    }
  }

  &__quote {
    background-color: $wa-navy;
    display: none;
    @include desktop {
      display: block;
    }

    .quote {
      background-color: $wa-navy;
      justify-self: flex-end;
      margin-top: 0;
      width: 50%;
      max-width: calculate-rem(660);
    }

    .quote__content {
      padding-right: 0;
      width: 100%;
    }

    .quote__content--quote {
      @include h5();
    }
  }

  &__donate {
    @include desktop() {
      position: absolute;
      top: 6rem;
      left: $wa-spacing-09;
      width: 50%;
      max-width: calculate-rem(660);
    }
  }

  &__content {
    @include paragraph-md;

    position: relative;
    padding: $wa-spacing-07 $wa-spacing-05;
    display: flex;
    gap: $wa-spacing-06;
    flex-direction: column;

    @include tablet {
      padding: $wa-spacing-09 0;
    }

    &--title {
      margin: 0;
      color: $wa-white;
    }

    &--standfirst {
      @include paragraph-lg;

      p {
        margin: 0;
      }
    }

    &--ctas {
      z-index: 10;
      display: flex;
      flex-direction: column;
      gap: $wa-spacing-06;

      @include tablet {
        flex-direction: row;
        align-items: center;
      }
    }

    &--tags {
      display: flex;
      gap: $wa-spacing-02;
    }

    &--wrapper {
      display: flex;
      flex-direction: column;
      gap: $wa-spacing-02;
    }

    &--details {
      display: flex;
      flex-direction: column;
      gap: $wa-spacing-02;

      @include tablet {
        flex-direction: row;
        gap: $wa-spacing-03;
      }

      svg {
        display: none;

        @include tablet {
          display: block;
          width: $wa-spacing-03;
          height: auto;
          color: $wa-blue;
        }
      }
    }

    &--date {
      font-family: $bold-font;
    }

    &--time {
      display: flex;
      align-items: center;
      gap: $wa-spacing-03;

      svg {
        width: $wa-spacing-06;
        height: auto;
      }
    }
  }

  &--basic {
    .cta__content {
      padding: $wa-spacing-07 $wa-spacing-05;

      @include tablet {
        padding: $wa-spacing-09;
      }
    }
  }

  &--basic,
  &--media,
  &--news {
    background-color: $wa-white;

    .hero__content-wrapper {
      display: flex;
      gap: $wa-spacing-06;
      flex-direction: column;
      position: relative;
    }

    .hero__image img {
      max-height: calculate-rem(480);
    }
  }

  &--blue {
    .hero__content {
      background-color: $wa-blue;
      color: $wa-white;
      margin-bottom: $wa-spacing-09;
      padding: $wa-spacing-07 $wa-spacing-05 $wa-spacing-01 $wa-spacing-05;

      @include desktop {
        margin-bottom: $wa-spacing-10;
        padding: $wa-spacing-09 0 $wa-spacing-01 0;
      }

      &::after {
        content: "";
        display: block;
        position: absolute;
        background-image: url("/themes/custom/wateraid/images/icons/wa-edge-bottom-1-blue.svg");
        background-position: center;
        background-size: 100% 100%;
        background-repeat: no-repeat;
        width: 100%;
        left: 0;
        height: $wa-spacing-09;
        bottom: -$wa-spacing-09;

        @include desktop {
          height: $wa-spacing-10;
          bottom: -$wa-spacing-10;
        }
      }
    }

    .hero__content--link a {
      color: $wa-white;
    }
  }

  &--white {
    &[data-component-id="wateraid:hero"] {
      margin-bottom: $wa-spacing-09;
    }

    .hero__content {
      background-color: $wa-white;
    }

    .hero__content--title,
    .hero__content--link a,
    .hero__content--time svg {
      color: $wa-blue;
    }
  }

  &--navy {
    .hero__content {
      background-color: $wa-navy;
    }

    .hero__content,
    .hero__content--link a {
      color: $wa-white;
    }
  }

  &--news {
    .hero__content {
      gap: 0;
    }

    .hero__content--tags {
      margin-bottom: $wa-spacing-06;

      @include desktop {
        margin-bottom: $wa-spacing-07;
      }
    }

    .hero__content--title {
      margin-bottom: $wa-spacing-02;
    }

    &.hero--white .hero__content--standfirst {
      color: $wa-blue;
    }

    .hero__content--standfirst {
      margin-bottom: $wa-spacing-06;
    }
  }

  &--donate {
    background-color: $wa-navy;
    transition: margin 300ms;

    .hero__image img {
      max-height: calculate-rem(720);
    }

    .image__credit {
      width: 50%;
      max-width: calculate-rem(660);
    }

    .donate-widget[data-component-id="wateraid:donate_widget"] {
      margin-top: 0;
      @include desktop {
        margin-top: 0;
      }
    }
  }

  &--search {
    .hero__content {
      max-width: calculate-rem(888);
      margin: 3rem auto 0 auto;
      padding: 0 $wa-spacing-05;

      @include desktop() {
        padding: 0;
      }
    }

    h1 {
      color: $wa-blue;
    }
  }

  &--story[data-component-id="wateraid:hero"] {
    position: relative;
    background: white;
    margin-bottom: 0;

    @include desktop {
      .hero__image img,
      .hero__video video {
        max-height: 864px;
        object-fit: cover;
      }
      .hero__content {
        position: absolute;
        top: $wa-spacing-09;
        left: $wa-spacing-09;
        width: calculate-rem(660);
        padding: $wa-spacing-09;
        display: flex;
        flex-direction: column;
        gap: 0;

        &--title {
          margin-bottom: $wa-spacing-06;
        }

        &--standfirst {
          margin-bottom: $wa-spacing-06;
        }
      }
    }

  }

  .field--name-field-media-oembed-video {
    position: relative;
    overflow: hidden;
    width: 100%;
    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
  }

  /* Then style the iframe to fit in the container div with full height and width */
  .media-oembed-content {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
  }
}

